# wallet

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  rust-toolchain.toml
.github/installer/: Cargo.toml
.github/workflows/: build-macos.yml  build-windows.yml
assets/: main.css
src/: error.rs  gateway.rs  main.rs  signer.rs  smart_account.rs  updater.rs
