[package]
name = "wallet"
version = "0.1.0"
authors = ["alex <aabinaei@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
dioxus = { version = "0.6.0", features = [] }
keyring = { version = "3.6.1", features = ["apple-native", "windows-native"] }
serde = { version = "1.0.217", features = ["derive"] }
solana-client = "1.18"
solana-sdk = "1.18"
squads-multisig = "2.0.1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
